objects/Project__c.object
<CustomObject>
    <description>Project object implemented in Q1 2012 for LMV Projects. Data is populated from SAP Sales Orders.</description>
    <fields>
        <fullName>ADDITIONAL_NOTES__c</fullName>
        <label>Additional Notes</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APPROVAL_REQUIRED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to TRUE if Approval Text equals one of the following values: &quot;Approval based on &apos;X&apos; weeks after receipt of drawings&quot; , &quot;Approval based on receipt of drawings&quot;, &quot;Drawing Approval Meeting&quot;</description>
        <label>Approval Drawings Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Account linked to related Opportunity</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Spend__c</fullName>
        <description>$ spent on project to date</description>
        <inlineHelpText>R&amp;D Project $ spent on project to date</inlineHelpText>
        <label>Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Engineer__c</fullName>
        <description>SAP: AE_NAME</description>
        <inlineHelpText>Application Engineer who quoted the project</inlineHelpText>
        <label>Application Engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Text__c</fullName>
        <inlineHelpText>Mapped from SAP, defines if approval drawings are required and how they will conduct the approvals (i.e. x weeks, on-board review meeting, etc)</inlineHelpText>
        <label>Approval Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_NAME_1__c</fullName>
        <inlineHelpText>BDM Name who received credit. Related to Split 1 percentage.</inlineHelpText>
        <label>BDM Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_Name_2__c</fullName>
        <inlineHelpText>BDM Name who received credit. Related to Split 2 percentage.</inlineHelpText>
        <label>BDM Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_Split_1__c</fullName>
        <inlineHelpText>% split of BDM credit</inlineHelpText>
        <label>BDM Split 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BDM_Split_2__c</fullName>
        <inlineHelpText>% split of BDM credit</inlineHelpText>
        <label>BDM Split 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bill_to_Telebox__c</fullName>
        <inlineHelpText>SAP Header Bill To Master Telebox. This identifies if the customer is setup for outbound EDI.  Position 1 is the EDI invoice, Position 5 is the EDI order acknowledgment, Position 6 is the EDI advanced ship notice</inlineHelpText>
        <label>Bill to Telebox</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Block__c</fullName>
        <inlineHelpText>SAP Header - Billing Document tab. Indicates if the entire sales document is blocked for billing.</inlineHelpText>
        <label>Billing Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bond Closed</description>
        <inlineHelpText>When a Supply Bond, Performance Bond, or Parent Company Guarantee is closed in the GREAT tool, the box is checked.</inlineHelpText>
        <label>Bond Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budgeted_Cost__c</fullName>
        <description>Planned and approved budget for project</description>
        <inlineHelpText>R&amp;D Project planned and approved budget for project</inlineHelpText>
        <label>Budgeted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CERTIFIED_TEST_RESULTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Test Results Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMPAS_Notes__c</fullName>
        <inlineHelpText>SAP Header Texts - Notes brought over from COMPAS to SAP.  Only captures the first 255 characters.</inlineHelpText>
        <label>COMPAS Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMPAS_Quote_No__c</fullName>
        <inlineHelpText>SAP Header - Order Data Tab. Purchase Order No. field.  Typically auto-populated from COMPAS to SAP upon transfer</inlineHelpText>
        <label>COMPAS Quote #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTRACT_ADMIN__c</fullName>
        <inlineHelpText>Name of contract administrator, mapped from SAP partners.</inlineHelpText>
        <label>Contract Administrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMERPO_DATE__c</fullName>
        <inlineHelpText>Date on the Customer PO</inlineHelpText>
        <label>Customer PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Out_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The letter informs the project has been formally closed and includes contacts for spare parts/service, warranty and future business. If formal documentation required (PAC – Project closure certificate),this should be submitted in lieu of the letter.</inlineHelpText>
        <label>Close Out Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Project_Manager_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Derived by the e-mail of the commercial project manager from SAP and matched with a related user.</description>
        <inlineHelpText>Name of commercial project manager, mapped from SAP partners.</inlineHelpText>
        <label>Commercial Project Manager (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Project_Manager__c</fullName>
        <description>Name of commercial project manager, mapped from SAP.</description>
        <inlineHelpText>Name of commercial project manager, mapped from SAP partners.</inlineHelpText>
        <label>Commercial Project Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Plan_Actual__c</fullName>
        <inlineHelpText>Communication plan has been created (Contacts are in SFDC.  Communication plan has been created and uploaded – if required)</inlineHelpText>
        <label>Communication Plan - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Communication_Plan_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is set to TRUE when the Communication Plan - Actual is set.</description>
        <inlineHelpText>This is set to TRUE when the Communication Plan - Actual is set.</inlineHelpText>
        <label>Communication Plan - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Plan_Due__c</fullName>
        <formula>IF( ISBLANK(DATE_FILERECEIVED_FROMAE__c) , SO_Created_Date__c + 14, DATE_FILERECEIVED_FROMAE__c + 14 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Within two weeks after Handover</inlineHelpText>
        <label>Communication Plan - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Administrator_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Derived by the e-mail of the contract administrator from SAP and matched with a related user.</description>
        <inlineHelpText>Name of contract administrator, mapped from SAP partners.</inlineHelpText>
        <label>Contract Administrator (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Actual__c</fullName>
        <inlineHelpText>Commercial contract (“WILL”) has been completed</inlineHelpText>
        <label>Contract Review - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is set to TRUE when the Contract Review - Actual is set.</inlineHelpText>
        <label>Contract Review - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Due__c</fullName>
        <formula>IF( ISBLANK(DATE_FILERECEIVED_FROMAE__c) , SO_Created_Date__c + 7, DATE_FILERECEIVED_FROMAE__c + 7 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Within one week after Handover</inlineHelpText>
        <label>Contract Review - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Order_Name__c</fullName>
        <inlineHelpText>SAP Header - Order Data Tab. Name field. Indicates the person who converted the order from the configuration tool to SAP.</inlineHelpText>
        <label>Converted Order Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Approval_Cycle_Weeks__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText># of weeks allowed for the customer to review, approve, and release for manufacturing.  This is default to 3 and can be manually changed by PM/CA based on contract or agreement.</inlineHelpText>
        <label>Customer Approval Cycle (Weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Industry__c</fullName>
        <label>Customer Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <description>SAP: BSTNK</description>
        <externalId>true</externalId>
        <inlineHelpText>Customer PO# mapped from SAP header</inlineHelpText>
        <label>Customer PO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Name__c</fullName>
        <inlineHelpText>Unique customer project name from SAP</inlineHelpText>
        <label>Customer Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATE_FILERECEIVED_FROMAE__c</fullName>
        <inlineHelpText>Date the handover between AE and PM/CA occurred for PM100 gate (if applicable). Mapped from SAP.</inlineHelpText>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_ORDER_ACKNOWLEDGEMENT__c</fullName>
        <inlineHelpText>Date the Order Acknowledgement was sent to the customer. Mapped from SAP</inlineHelpText>
        <label>Order Acknowledgement Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_PORECEIVED__c</fullName>
        <inlineHelpText>Date Siemens received the PO. Can be manually set if the project was not quoted within Salesforce.</inlineHelpText>
        <label>Date PO Received - Manual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSS_Manager__c</fullName>
        <description>Digital Solutions &amp; Service Project Manager.</description>
        <label>DSS Project Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_PO_Received__c</fullName>
        <formula>Opportunity__r.Order_Received__c</formula>
        <inlineHelpText>Date Siemens received the PO from the PO portal. Mapped from the Opportunity.</inlineHelpText>
        <label>Date PO Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Survey_sent__c</fullName>
        <description>Whenever the &quot;Send Survey&quot; button is clicked this date field is filled out. The Date field is not manually editable. This field needs to be included into the common report types.</description>
        <inlineHelpText>The date the &quot;send survey&quot; button was submitted.</inlineHelpText>
        <label>Date Survey sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Block__c</fullName>
        <inlineHelpText>SAP Header - Shipping Tab. Indicates if an entire order is blocked for delivery.</inlineHelpText>
        <label>Delivery Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <description>SAP: ZDISTCH</description>
        <inlineHelpText>For 9462 business, translates which sales channel received credit for the order. Mapped from SAP.</inlineHelpText>
        <label>Distribution Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>SAP: SPART</description>
        <inlineHelpText>Defines the business unit in SAP. Mapped from SAP.</inlineHelpText>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <description>SAP: VBTYP</description>
        <label>Document Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Management_Complexity__c</fullName>
        <label>Document Management Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drawing_Recipient_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used in Report to show all Project with Sales Order Items that require Engineering Drawings where there is no &quot;Drawing Recipient&quot; listed in the Project Contacts. 
Case : 651823</description>
        <label>Drawing Recipient Identified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drawing_Reference__c</fullName>
        <description>For MS, populated on record creation for new records, holds historical SO# for preexisting records. Created because we have to update SO# for Spiridon, but still need the old project # for the Drawings folders.</description>
        <label>Drawing Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_FSL_Work_Order_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the  flag to recognize that work order association was done correctly Via trigger.</description>
        <label>Work Order Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPC__c</fullName>
        <inlineHelpText>The Engineering, Procurement, &amp; Construction (EPC) firm (if applicable) mapped from SAP partner</inlineHelpText>
        <label>EPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVA__c</fullName>
        <inlineHelpText>For R&amp;D projects, the economic value added (EVA) is the estimate value created in excess of the spend.</inlineHelpText>
        <label>EVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPORT_BOXING__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is export packaging (sea worthy) required?</inlineHelpText>
        <label>Export Packaging Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Contractor__c</fullName>
        <label>Electrical Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Commercial_Project_Manager__c</fullName>
        <description>Reporting field for easily filtering teams using reports and dashboards</description>
        <inlineHelpText>Field is populated by SAP idoc with the respective partner email address</inlineHelpText>
        <label>Email Commercial Project Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Contract_Administrator__c</fullName>
        <description>Stores project contact email with role &quot;Contract Administrator&quot; for email alerts.</description>
        <inlineHelpText>Field is populated by SAP idoc with the respective partner email address</inlineHelpText>
        <label>Email Contract Administrator</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Siemens_PM__c</fullName>
        <description>Stores Project Contact with role of &quot;Siemens Project Manager&quot; for email alerts.</description>
        <inlineHelpText>Field is populated by SAP idoc with the respective partner email address</inlineHelpText>
        <label>Email Siemens PM</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_User_Industry_Segment__c</fullName>
        <formula>TEXT (Opportunity__r.End_User_Industry_Segment__c )</formula>
        <inlineHelpText>Mapped from the related Opportunity End User Industry Segment</inlineHelpText>
        <label>End User Industry Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Industry__c</fullName>
        <formula>TEXT(Opportunity__r.End_User_Industry__c)</formula>
        <inlineHelpText>Mapped from the related Opportunity End User Industry</inlineHelpText>
        <label>End User Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Market__c</fullName>
        <label>End User Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <inlineHelpText>The end user (entity who will actually use the product/service) mapped from SAP partner</inlineHelpText>
        <label>End User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_SISIC_Code__c</fullName>
        <inlineHelpText>End User Siemens Industry Classification. Mapped from SAP.</inlineHelpText>
        <label>End User SISIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_SISIC_Description__c</fullName>
        <description>This field is populated by the IDOC from Castirom Orchestration (SO - Oppty)</description>
        <label>End User SISIC Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Hours__c</fullName>
        <label>Estimated Total Hours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedite_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to define projects that require executive visibility (LDs, value, lead time, customer, or executive promise)</inlineHelpText>
        <label>Expedite Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Kickoff_Actual__c</fullName>
        <inlineHelpText>Date of External Kickoff Meeting</inlineHelpText>
        <label>External Kickoff - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FREIGHT_TERMS__c</fullName>
        <inlineHelpText>Incoterms specifies who is responsible for paying for and managing the shipment, insurance, documentation, customs clearance, and other logistical activities.  Mapped from SAP</inlineHelpText>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>Cost. Insurance And Freight</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>DDU  Delivered Duty Unpaid</fullName>
                </value>
                <value>
                    <fullName>Delivered Duty Paid</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>Ex-Works</fullName>
                </value>
                <value>
                    <fullName>FCA Destination</fullName>
                </value>
                <value>
                    <fullName>FCA Factory</fullName>
                </value>
                <value>
                    <fullName>FOB Factory</fullName>
                </value>
                <value>
                    <fullName>FOB GER Port</fullName>
                </value>
                <value>
                    <fullName>FOB Jobsite</fullName>
                </value>
                <value>
                    <fullName>FOB Laredo</fullName>
                </value>
                <value>
                    <fullName>FOB US Port</fullName>
                </value>
                <value>
                    <fullName>Free On Board Jobsite</fullName>
                </value>
                <value>
                    <fullName>Free On Board Laredo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FY_Actual_Spend__c</fullName>
        <inlineHelpText>For R&amp;D projects, FY $ spent on project to date</inlineHelpText>
        <label>FY Actual Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Budgeted_Cost__c</fullName>
        <description>Field for approved budget for this FY</description>
        <inlineHelpText>For R&amp;D projects, planned and approved budget for this fiscal year</inlineHelpText>
        <label>FY Budgeted Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Forecast_Spend__c</fullName>
        <inlineHelpText>For R&amp;D projects, forecast of spending for rest of FY</inlineHelpText>
        <label>FY Forecast Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Project_Documentation_Compiled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Latest documentation is compiled and available in the project folder. May consist of all contract documents, drawings, third party information, manuals, emails, meeting minutes, shipping documents, relay files, invoices, etc.</inlineHelpText>
        <label>Final Project Documentation Compiled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_SO_Created__c</fullName>
        <description>Calculates the Fiscal Year the SO was created in SAP</description>
        <formula>Text(YEAR(SO_Created_Date__c+92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the Fiscal Year the SO was created in SAP</inlineHelpText>
        <label>Fiscal Year SO Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Spend__c</fullName>
        <inlineHelpText>For R&amp;D projects, forecast of spending for remainder of project.</inlineHelpText>
        <label>Forecast Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Kickoff_Actual__c</fullName>
        <inlineHelpText>Date of Internal Kickoff Meeting</inlineHelpText>
        <label>Internal Kickoff - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Order_Number__c</fullName>
        <description>SAP Internal Order # assigned to project</description>
        <inlineHelpText>For R&amp;D Projects, SAP Internal Order # assigned to project</inlineHelpText>
        <label>Internal Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Partner_E_mail__c</fullName>
        <inlineHelpText>SAP Header Email Invoice Partner. The first email listed.</inlineHelpText>
        <label>Invoice Partner E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoicing_Revenue_Review_Actual__c</fullName>
        <inlineHelpText>Invoicing and revenue terms and review of dates has been completed</inlineHelpText>
        <label>Invoicing/Revenue Review - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoicing_Revenue_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is set to TRUE when the Invoicing/Revenue Review - Actual is set.</inlineHelpText>
        <label>Invoicing/Revenue Review - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoicing_Revenue_Review_Due__c</fullName>
        <formula>IF( ISBLANK(DATE_FILERECEIVED_FROMAE__c) , SO_Created_Date__c + 7, DATE_FILERECEIVED_FROMAE__c + 7 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Within one week after Handover</inlineHelpText>
        <label>Invoicing/Revenue Review - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Take_Away_Items__c</fullName>
        <inlineHelpText>Key take away items can be positive notes or things to keep in mind regarding this particular customer / project type / supplier / etc.</inlineHelpText>
        <label>Key Take Away Items</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LD_Additional_Notes__c</fullName>
        <inlineHelpText>Any notes related to liquidated damages. Mapped from SAP</inlineHelpText>
        <label>LD Additional Notes</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LD_PER_DAY_DELIVERY__c</fullName>
        <inlineHelpText>If liquidated damages apply for delivery of goods/services, the amount per day.  Mapped from SAP</inlineHelpText>
        <label>Delivery LD&apos;s Amount (per Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LD_PER_DAY_DRWG__c</fullName>
        <inlineHelpText>If liquidated damages apply for submittal of drawings, the amount per day.  Mapped from SAP</inlineHelpText>
        <label>Drawing LD&apos;s Amount (per Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LD_START_DATE_DELIVERY__c</fullName>
        <inlineHelpText>If liquidated damages apply for delivery of goods/services, the date in which the LDs will begin.  Mapped from SAP</inlineHelpText>
        <label>Delivery LD&apos;s Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LD_START_DATE_DRWG__c</fullName>
        <inlineHelpText>If liquidated damages apply for submittal of drawings, the date in which the LDs will begin.  Mapped from SAP</inlineHelpText>
        <label>Drawing LD&apos;s Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LIQUIDATED_DAMAGES__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked true if Liquidated Damages apply on this contract.</inlineHelpText>
        <label>Liquidated Damages Apply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOC_Expiration_Date__c</fullName>
        <description>Letter of credit expiration date. Mapped from SAP.</description>
        <label>LOC Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Project_Review_Date__c</fullName>
        <inlineHelpText>Date of the last project review</inlineHelpText>
        <label>Last Project Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Business_Unit__c</fullName>
        <description>The business unit that is taking the overall lead of the project - specifically project management and the face to the customer.</description>
        <inlineHelpText>The business unit that is taking the overall lead of the project - specifically project management and the face to the customer.</inlineHelpText>
        <label>Lead Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EM CS</fullName>
                </value>
                <value>
                    <fullName>EM DG</fullName>
                </value>
                <value>
                    <fullName>EM LP</fullName>
                </value>
                <value>
                    <fullName>EM MS</fullName>
                </value>
                <value>
                    <fullName>PD LD</fullName>
                </value>
                <value>
                    <fullName>MS-US</fullName>
                </value>
                <value>
                    <fullName>MS-MEX</fullName>
                </value>
                <value>
                    <fullName>MS-CAN</fullName>
                </value>
                <value>
                    <fullName>MS-AAN</fullName>
                </value>
                <value>
                    <fullName>LP-US</fullName>
                </value>
                <value>
                    <fullName>LP-CAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lessons_Learned_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Lessons learned should be documented in Salesforce using the Lessons Learned panel at the Project level. After adding Lessons learned, manually check the Lessons Learned checkbox.</inlineHelpText>
        <label>Lessons Learned Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_of_Credit_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Letter of Credit Closed</description>
        <inlineHelpText>When a Letter of Credit is closed in the GREAT tool, the box is checked by the CA or CPM.</inlineHelpText>
        <label>Letter of Credit Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Open_NCRs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked TRUE if NO nonconformance case is open related to the project.</inlineHelpText>
        <label>No Open NCRs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Project_Contacts__c</fullName>
        <inlineHelpText>Number of Project Contacts related to this Project</inlineHelpText>
        <label># of Survey Contacts</label>
        <summaryFilterItems>
            <field>Project_Contact__c.Survey_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Contact__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Drawing_Recipients__c</fullName>
        <description>Number indicating number of Drawing Recipients (from Project contacts). Should be updated whenever project or project contacts are modified / added.</description>
        <label>Number of Drawing Recipients</label>
        <summarizedField>Project_Contact__c.Drawing_Recipients_Value__c</summarizedField>
        <summaryForeignKey>Project_Contact__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Surveys_Required__c</fullName>
        <description># of Project Contacts with &quot;Survey Required&quot; checked as TRUE</description>
        <label>Number of Surveys Required</label>
        <summarizedField>Project_Contact__c.Survey_Required_Value__c</summarizedField>
        <summaryForeignKey>Project_Contact__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OVERALL_CAP_ON_LDS__c</fullName>
        <label>Overall LD Cap (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity record from which this project originated.</description>
        <inlineHelpText>Related Opportunity for which this project was quoted. Linked by entering the SF# into SAP header.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>